package com.pattern;

public interface DisplayElement {
    void display();
}
