package com.pattern;

public interface Observer {

    void update(float temp,float humidity, float pressure);
}
